--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #333;
-  background-color: #f5f5f5;
+  background-color: #d0d0d0; /*edited: default #f5f5f5*/
 }
 
 header {
@@ -25,7 +25,6 @@ header {
 
 header h1 {
   font-weight: 300;
-  margin-left: 10px;
 }
 
 .container {
@@ -112,7 +111,7 @@ header h1 {
   display: flex;
   justify-content: space-between;
   width: 45%;
-  border: 1px solid #ccc;
+  border: 1px solid #161616; /*edited: default #ccc */
   border-radius: 5px;
   padding: 10px 15px;
   margin: 0 5px 20px;
